Bug 1591863 - Ensure we don't sometimes bypass the possibility of intra-family style fallback in system fonts. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D50930

--HG--
extra : moz-landing-system : lando